part_1/1.07/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashapp-service
spec:
  type: ClusterIP
  selector:
    app: hashapp
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
